objects/APL_Forecast_Management__c.object
<CustomObject>
    <fields>
        <fullName>A6_Code__c</fullName>
        <externalId>true</externalId>
        <label>A6 Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Freeze__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to freeze the forecast screen</description>
        <label>AM Freeze</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_APL_Won_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add APL Won Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GAM_Code__c</fullName>
        <label>GAM Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM_Freeze__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to freeze the forecast screen</description>
        <label>GAM Freeze</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>APL_Forecast_Managements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSM_Freeze__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to freeze the forecast screen</description>
        <label>RSM Freeze</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>APL RSM</label>
        <referenceTo>APL_RSM__c</referenceTo>
        <relationshipLabel>APL Forecast Managements</relationshipLabel>
        <relationshipName>APL_Forecast_Managements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relay_Specialist__c</fullName>
        <label>Relay Specialist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>APL Forecast Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>A6_Code__c</columns>
        <columns>NAME</columns>
        <columns>RSM__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>APL Forecast Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>APL Forecast Managements</pluralLabel>
    <recordTypes>
        <fullName>AM</fullName>
        <active>true</active>
        <label>AM</label>
    </recordTypes>
    <recordTypes>
        <fullName>GAM</fullName>
        <active>true</active>
        <label>GAM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Relay</fullName>
        <active>true</active>
        <label>Relay</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>